# api_python_ia

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agents/: epic_agent.py  feature_agent.py  task_agent.py  user_story_agent.py
app/core/: llm_service.py
app/database/: database.py  models.py
app/routers/: generation.py  prompts.py
app/schemas/: schemas.py
